--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "prettier-plugin-tailwindcss": "^0.6.8",
     "rimraf": "^6.0.1",
     "turbo": "^2.1.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vitest": "^2.1.4"
   },
   "packageManager": "npm@10.9.0"
 }
