--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -14,25 +14,26 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-navigation/drawer": "^6.6.3",
     "@supabase/supabase-js": "^2.74.0",
     "@tanstack/react-query": "^5.59.0",
     "expo": "~54.0.20",
+    "expo-constants": "~16.0.2",
     "expo-router": "~3.5.8",
     "expo-secure-store": "~13.0.2",
-    "expo-splash-screen": "~0.26.4",
+    "expo-splash-screen": "^31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~4.0.3",
     "expo-updates": "~0.25.17",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "~4.9.0",
-    "zustand": "^5.0.1",
     "react-native-url-polyfill": "^2.0.0",
-    "@react-navigation/drawer": "^6.6.3",
-    "react-native-reanimated": "~3.16.1",
-    "expo-constants": "~16.0.2"
+    "vitest": "4.0.6",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
