--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,14 +22,14 @@
     "tailwindcss": "^3.4.15",
     "typescript": "~5.9.3",
     "vite": "^7.1.7",
-    "vitest": "^2.1.4"
+    "vitest": "^4.0.6"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "@supabase/supabase-js": "^2.74.0",
     "@tanstack/react-query": "^5.59.0",
-    "zustand": "^5.0.1",
-    "lucide-react": "^0.447.0"
+    "lucide-react": "^0.447.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "zustand": "^5.0.1"
   }
 }
